[gd_scene load_steps=4 format=1]

[ext_resource path="res://scripts/box.gd" type="Script" id=1]
[ext_resource path="res://gfx/box.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 32, 32 )

[node name="box" type="KinematicBody2D"]

input/pickable = false
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = true
collision/layers = 1
collision/mask = 1
collision/margin = 0.08
script/script = ExtResource( 1 )
__meta__ = { "__editor_plugin_screen__":"2D" }
moveable = false
TILE_COLLECT = 2
TILE_SINK = 2
TILE_LADDER = 1

[node name="Sprite" type="Sprite" parent="."]

texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

shape = SubResource( 1 )
trigger = true
_update_shape_index = -1

[node name="ray_top" type="RayCast2D" parent="."]

enabled = true
cast_to = Vector2( 0, -32 )
layer_mask = 1
type_mask = 15

[node name="ray_right" type="RayCast2D" parent="."]

enabled = true
cast_to = Vector2( 32, 0 )
layer_mask = 1
type_mask = 15

[node name="ray_bottom" type="RayCast2D" parent="."]

enabled = true
cast_to = Vector2( 0, 32 )
layer_mask = 1
type_mask = 15

[node name="ray_left" type="RayCast2D" parent="."]

enabled = true
cast_to = Vector2( -32, 0 )
layer_mask = 1
type_mask = 15

[node name="ray_check_top" type="RayCast2D" parent="."]

transform/pos = Vector2( 0, -64 )
enabled = true
cast_to = Vector2( 0, 8 )
layer_mask = 1
type_mask = 15

[node name="ray_check_right" type="RayCast2D" parent="."]

transform/pos = Vector2( 64, 0 )
enabled = true
cast_to = Vector2( 0, 8 )
layer_mask = 1
type_mask = 15

[node name="ray_check_bottom" type="RayCast2D" parent="."]

transform/pos = Vector2( 0, 64 )
enabled = true
cast_to = Vector2( 0, 8 )
layer_mask = 1
type_mask = 15

[node name="ray_check_left" type="RayCast2D" parent="."]

transform/pos = Vector2( -64, 0 )
enabled = true
cast_to = Vector2( 0, 8 )
layer_mask = 1
type_mask = 15


